--- a/README.Rmd
+++ b/README.Rmd
@@ -35,34 +35,37 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(quantmod)
+library(tidyr)
 library(dplyr)
+library(tsibble)
 library(CoQR)
-
 
 # Get data from Yahoo Finance
 data_Symbols <- lapply(c("JPM", "^GSPC"), function(x) {
   getSymbols(x,
              from = "2000/01/01",
-             to = "2022/05/25",
+             to = "2021/12/31",
              periodicity = "daily",
              auto.assign = FALSE) %>%
-    data.frame(Date=index(.), check.names=FALSE) %>%
-    tibble::as_tibble() %>%
+    data.frame(Date=zoo::index(.), check.names=FALSE) %>%
     rename_all(~stringr::str_replace_all(., paste0(x,"."), ""))
 })
 names(data_Symbols) <- c("JPM", "SP500")
 
-data_Assets <- bind_rows(data_Symbols, .id = "Asset") %>%
+# Collect data as a tsibble with x and y as column names
+data_Assets <- dplyr::bind_rows(data_Symbols, .id = "Asset") %>%
   dplyr::group_by(Asset) %>%
   dplyr::mutate(Date=lubridate::as_date(Date),
          NegReturn= -100*(log(Close) - log(lag(Close)))) %>%
   dplyr::select(Date, Asset, NegReturn) %>%
-  na.omit()
+  stats::na.omit() %>%
+  tidyr::pivot_wider(names_from=Asset, values_from=NegReturn) %>%
+  dplyr::rename(x=JPM, y=SP500) %>%
+  tsibble::as_tsibble(index=Date)
 
-# Fit a CoCAViaR model
-CoCAViaR_obj <- CoQR(x=data_Assets %>% filter(Asset=="JPM") %>% pull(NegReturn),
-                     y=data_Assets %>% filter(Asset=="SP500") %>% pull(NegReturn),
-                     z=NULL, 
+
+# Fit a CoCAViaR-SAV-fullA model
+CoCAViaR_obj <- CoQR(data=data_Assets,
                      model="CoCAViaR_SAV_fullA", 
                      SRM="CoVaR", 
                      beta=0.95, 
@@ -71,12 +74,7 @@ CoCAViaR_obj <- CoQR(x=data_Assets %>% filter(Asset=="JPM") %>% pull(NegReturn),
 # Get standard errors and print its summary
 summary(CoCAViaR_obj)
 
-# Plot
+# Plot the time series and estimated (in-sample) VaR/CoVaR
 plot(CoCAViaR_obj)
-
-## basic example code
 ```
-
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
 
